# AIG-Doggy

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml  upstream-check.yml
doggy/: __init__.py  __main__.py  exceptions.py
doggy/adapters/: protocol.py
doggy/auth/: api_key.py  middleware.py
doggy/cache/: redis_cluster.py
doggy/configs/default/: config.yml  input_rails.co  main.co  output_rails.co  prompts.yml
doggy/db/: postgres.py
doggy/engine/: lite_guard.py  nemo_adapter.py  protocol.py
doggy/messaging/: __init__.py  kafka_producer.py
doggy/rails/: __init__.py  multilingual.py
doggy/rails/input/: content_safety.py  injection.py  jailbreak.py  pii_detection.py  topic_control.py
doggy/rails/output/: factchecking.py  hallucination.py  hf_classifier.py  hf_local.py  hf_remote.py
doggy/rails/plugins/: __init__.py  auto_register.py  base.py  regex_detection.py
doggy/rails/retrieval/: __init__.py
doggy/server/: admin_api.py  api.py  bootstrap.py  logging_config.py  metrics.py
helm/doggy/: Chart.yaml  values.yaml
helm/doggy/templates/: gateway.yaml  monitoring.yaml  secrets.yaml
k8s/nim/: content-safety.yaml
scripts/: init_db.sql
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_core.py
tests/security/: test_effectiveness.py
tests/security/fixtures/: attack_samples.json  normal_samples.json
tests/unit/adapters/: test_protocol.py
tests/unit/auth/: test_api_key.py
tests/unit/engine/: test_lite_guard.py
tests/unit/rails/: test_output_plugins.py  test_plugins.py
ui/admin/: package.json  vite.config.ts
ui/admin/src/: main.tsx
(+6 files in other folders)
