[project]
name = "doggy"
version = "0.1.0.dev0"
description = "AIG-Doggy — 企业级 LLM 安全护栏"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [{ name = "AIG-Doggy Team" }]

dependencies = [
    # 生产环境: PyPI 最新版本
    # 开发环境: pip install git+https://github.com/NVIDIA-NeMo/Guardrails.git
    "nemoguardrails>=0.23.0,<0.25.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiokafka>=0.10.0",
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "aiohttp>=3.10.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
server = ["aiofiles>=24.1.0", "openai>=1.0.0", "watchdog>=3.0.0"]
sdd = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
jailbreak = ["yara-python>=4.5.1,<5.0.0"]
multilingual = ["fast-langdetect>=1.0.0"]

[dependency-groups]
lint = ["ruff>=0.5.0"]
typing = ["ty>=0.0.56"]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "pytest-mock>=3.14.0",
    "testcontainers>=4.8.0",
]
dev = [
    "pre-commit>=3.1.1",
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "typing" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["doggy"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
addopts = "-p no:warnings --cov=doggy --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]